Add service to generate winner

--- a/src/service/mailer/templates/owner-auction.html
+++ b/src/service/mailer/templates/owner-auction.html
@@ -101,10 +101,10 @@
             perderá e outro usuário será sorteado.</p>
         </div>
         <div>
-          <p><b>Nome do doador:</b> <%= userName %> </p>
-          <p><b>Email:</b> <%= userEmail %> </p>
-          <p><b>Celular:</b> <%= userPhoneNumber %> </p>
-          <p><b>Observações Adicionais:</b> <%= userInfos %> </p>
+          <p><b>Nome do doador:</b> <%= userWinnerName %> </p>
+          <p><b>Email:</b> <%= userWinnerEmail %> </p>
+          <p><b>Celular:</b> <%= userWinnerPhoneNumber %> </p>
+          <p><b>Observações Adicionais:</b> <%= userWinnerInfos %> </p>
         </div>
         <div class="space"></div>
         <div class="space"></div>
