--- a/src/service/mailer/templates/winner-auction.html
+++ b/src/service/mailer/templates/winner-auction.html
@@ -93,7 +93,7 @@
         <div class="start">
           <h1>Cottonnect <img src="cid:logo"></h1>
         </div>
-        <h2>Oi, <%= userName %>! Parabéns você ganhou o leilão <%= auctionPath %> 🥳🎉 </h2>
+        <h2>Oi, <%= userName %>! Parabéns você ganhou o leilão <%= auctionName %> 🥳🎉 </h2>
         <div class="space"></div>
         <div>
           <p>Segue abaixo os dados do proprietário para você entrar em contato com ele e receber seu item.</p>
@@ -101,10 +101,10 @@
             o perderá e outro usuário será sorteado.</p>
         </div>
         <div>
-          <p><b>Nome do doador:</b> <%= userName %> </p>
-          <p><b>Email:</b> <%= userEmail %> </p>
-          <p><b>Celular:</b> <%= userPhoneNumber %> </p>
-          <p><b>Observações Adicionais:</b> <%= userInfos %> </p>
+          <p><b>Nome do doador:</b> <%= userOwnerName %> </p>
+          <p><b>Email:</b> <%= userOwnerEmail %> </p>
+          <p><b>Celular:</b> <%= userOwnerPhoneNumber %> </p>
+          <p><b>Observações Adicionais:</b> <%= userOwnerInfos %> </p>
         </div>
         <div class="space"></div>
         <div class="space"></div>
