Fix name var to mailer template

--- a/src/service/mailer/templates/winner-auction.html
+++ b/src/service/mailer/templates/winner-auction.html
@@ -93,7 +93,7 @@
         <div class="start">
           <h1>Cottonnect <img src="cid:logo"></h1>
         </div>
-        <h2>Oi, <%= userName %>! Parabéns você ganhou o leilão <%= auctionName %> 🥳🎉 </h2>
+        <h2>Oi, <%= userName %>! Parabéns, você ganhou o leilão <%= auctionName %> 🥳🎉 </h2>
         <div class="space"></div>
         <div>
           <p>Segue abaixo os dados do proprietário para você entrar em contato com ele e receber seu item.</p>
